fixed layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,6 @@ main {
   .dashboard {
     height: 100vh;
     margin-top: 20px;
-    position: relative;
   }
 
   .header {
